argocd/manifests/nginx-ingress.yaml
# apiVersion: networking.k8s.io/v1beta1 # for k3s < v1.19
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx
  namespace: spring-microservices
  annotations:
    kubernetes.io/ingress.class: traefik
    ingress.kubernetes.io/ssl-redirect: "true"
    ingress.kubernetes.io/force-ssl-redirect: "true"
    traefik.ingress.kubernetes.io/redirect-entry-point: https
#    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
  - host: "sample.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: github-actions-sample
            port:
              number: 8080
